overflow bug

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  overflow: hidden;
 }
 
 .Container {
@@ -25,6 +26,15 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+}
+
+.rubik-dirt-regular {
+  font-family: "Rubik Dirt", system-ui;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 60px;
+  margin: 0;
+  color: white;
 }
 
 .App-header {
@@ -52,36 +62,21 @@
 }
 
 html, body {
-  height: 100vh;  /* Ensures the body takes up the full viewport */
+  /* height: 100vh;  Ensures the body takes up the full viewport */
+  height: 100%;
+  width: 100%;
   margin: 0;     /* Removes default margin */
   padding: 0;    /* Removes default padding */
   overflow: hidden;
-}
-
-body{
-  /* background-image: linear-gradient(#363636, #121212); */
-  background-image: url("./background.jpg");
-  margin: 0;
-  padding: 0;
-  height: 100vh;
-  overflow: hidden;
-}
-
-.rubik-dirt-regular {
-  font-family: "Rubik Dirt", system-ui;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 60px;
-  margin: 0;
-  color: white;
 }
 
 body {
   background-image: linear-gradient(#363636, #121212);
   margin: 0;
   height: 100vh;
-  overflow: hidden;
+  width: 100vw;
   position: relative;
+  overflow: hidden;
 }
 
 body::before, body::after {
@@ -91,20 +86,20 @@ body::before, body::after {
   background: #ebc334;
   animation: moveCircle 5s infinite ease-in-out alternate;
   z-index: -1; 
+  width: 80vw; 
+  height: 80vw; 
 }
 
 body::before {
-  width: 80vw; 
-  height: 80vw; 
   top: -40vw; 
   left: -50vw;
 }
 
 body::after {
-  width: 80vw;
-  height: 80vw;
-  bottom: -40vw;
-  right: -50vw; 
+  bottom: -40vw;   /* Move the second circle outside */
+  right: -50vw;    /* Move the second circle outside */
+  position: fixed;
+  animation: moveCircle 5s infinite ease-in-out alternate;
 }
 
 @keyframes moveCircle {
